# rotate-image

./: .gitignore  CMakeLists.txt  README.md
solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  io.h  transformations.h  utils.h
solution/src/: bmp.c  io.c  main.c  utils.c
solution/src/transformation/: ccw_90.c  cw_90.c  flip_h.c  flip_v.c  none.c
tester/src/: main.c
